--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,16 @@ packages = [{ include = "app", from = "src" }]
 python = ">=3.11"
 python-dotenv = "^1.0.0"
 loguru = "^0.7.0"
+click = "^8.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
 pytest-cov = "^4.1.0"
 ruff = "^0.8.0"
 pre-commit = "^3.5.0"
+
+[tool.poetry.scripts]
+validate-submission = "scripts.validate_submission:main"
 
 [build-system]
 requires = ["poetry-core"]
