Update project structure and configuration for Finam Trading Assistant. Enhance .env.example with API keys, modify .gitignore to exclude virtual environment files, and rename project in pyproject.toml. Add core application files including FastAPI setup, configuration management, and trading functionalities. Implement tools for account management, order placement, and data visualization.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,17 @@
-# заполните и сохраните как .env (НЕ коммитить)
-API_KEY=
+# Environment variables example
+# Copy this file to .env and fill in your values
+
+# OpenRouter API
+OPENROUTER_API_KEY=your_openrouter_api_key_here
+
+# Finam API (if using real client)
+FINAM_API_KEY=your_finam_api_key_here
+FINAM_BASE_URL=https://trade-api.finam.ru
+
+# FastAPI
+HOST=0.0.0.0
+PORT=8000
+DEBUG=true
+
+# Logging
+LOG_LEVEL=INFO
