--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,26 @@
 [tool.poetry]
-name = "baseline-template"
+name = "finam-x-hse-trade-ai-hack-trader"
 version = "0.1.0"
-description = "A baseline template for machine learning projects"
+description = "Trader AI Assistant over Finam TradeAPI"
 authors = ["Maxim Kirilyuk <werserk@inbox.ru>"]
 readme = "README.md"
 packages = [{ include = "app", from = "src" }]
 
 [tool.poetry.dependencies]
 python = ">=3.11"
-python-dotenv = "^1.0.0"
-loguru = "^0.7.0"
-click = "^8.1.0"
+# fastapi = "^0.115.0"
+# uvicorn = "^0.30.0"
+# pydantic = "^2.8.0"
+# requests = "^2.32.0"
+# pandas = "^2.2.0"
+# plotly = "^5.24.0"
+# python-dotenv = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.4.0"
-pytest-cov = "^4.1.0"
-ruff = "^0.8.0"
-pre-commit = "^3.5.0"
+# pytest = "^8.2.0"
+# httpx = "^0.27.0"
+# black = "^24.8.0"
+# ruff = "^0.6.9"
 
 [tool.poetry.scripts]
 validate-submission = "scripts.validate_submission:main"
