Refactor project to a minimal baseline for Finam Trading Assistant. Remove unnecessary components, including FastAPI setup and CLI, while introducing a new script for generating submission files using LLM. Update .env.example for API configuration and enhance README with setup instructions. Revise dependencies in pyproject.toml and poetry.lock to reflect the new architecture.

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,16 @@
-# Environment variables example
-# Copy this file to .env and fill in your values
+# OpenRouter API Configuration
+# Получите API ключ на https://openrouter.ai/
+OPENROUTER_API_KEY=your_api_key_here
 
-# OpenRouter API
-OPENROUTER_API_KEY=your_openrouter_api_key_here
+# Базовый URL OpenRouter (обычно не нужно менять)
+OPENROUTER_BASE=https://openrouter.ai/api/v1
 
-# Finam API (if using real client)
-FINAM_API_KEY=your_finam_api_key_here
-FINAM_BASE_URL=https://trade-api.finam.ru
+# Модель для использования
+# Рекомендуемые:
+# - openai/gpt-4o-mini (быстрая и дешевая)
+# - openai/gpt-4o (более точная, но дороже)
+# - anthropic/claude-3-sonnet (альтернатива)
+OPENROUTER_MODEL=openai/gpt-4o-mini
 
-# FastAPI
-HOST=0.0.0.0
-PORT=8000
-DEBUG=true
-
-# Logging
-LOG_LEVEL=INFO
+# Debug mode (опционально)
+APP_DEBUG=false
