--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,22 +8,22 @@ packages = [{ include = "app", from = "src" }]
 
 [tool.poetry.dependencies]
 python = ">=3.11"
-# fastapi = "^0.115.0"
-# uvicorn = "^0.30.0"
-# pydantic = "^2.8.0"
-# requests = "^2.32.0"
-# pandas = "^2.2.0"
-# plotly = "^5.24.0"
-# python-dotenv = "^1.0.1"
+pydantic = "^2.11.9"
+requests = "^2.32.5"
+python-dotenv = "^1.1.1"
+click = "^8.1.7"
+tqdm = "^4.67.1"
 
 [tool.poetry.group.dev.dependencies]
-# pytest = "^8.2.0"
-# httpx = "^0.27.0"
-# black = "^24.8.0"
-# ruff = "^0.6.9"
+pytest = "^8.4.2"
+httpx = "^0.28.1"
+black = "^25.9.0"
+ruff = "^0.13.3"
+types-requests = "^2.32.0"
 
 [tool.poetry.scripts]
 validate-submission = "scripts.validate_submission:main"
+generate-submission = "scripts.generate_submission:main"
 
 [build-system]
 requires = ["poetry-core"]
@@ -53,11 +53,15 @@ select = [
 ]
 ignore = [
     "CPY001", # Ignore annotations for self
+    "RUF001", # String contains ambiguous unicode characters (Cyrillic)
+    "RUF002", # Docstring contains ambiguous unicode characters (Cyrillic)
+    "RUF003", # Comment contains ambiguous unicode characters (Cyrillic)
 ]
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
 "tests/**/*" = ["ARG001", "ARG002"]
+"scripts/**/*" = ["ANN"]
 
 [tool.ruff.format]
 quote-style = "double"
