Add Docker support and restructure project for Finam Trading Assistant. Introduce Dockerfile and docker-compose.yml for containerization, along with a .dockerignore file. Implement a development guide and update README for setup instructions. Add new scripts for metrics calculation and enhance core functionalities with a Finam API client. Remove obsolete files and improve project organization.

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,6 @@ OPENROUTER_MODEL=openai/gpt-4o-mini
 
 # Debug mode (опционально)
 APP_DEBUG=false
+
+FINAM_ACCESS_TOKEN=your_finam_access_token_here
+FINAM_API_BASE_URL=https://trade-api.finam.ru
