Update API base URL in configuration files and add requirements.txt for project dependencies. Introduce evaluate.py script for submission validation and metrics calculation, enhancing the evaluation process for the Finam Trading Assistant.

--- a/.env.example
+++ b/.env.example
@@ -16,4 +16,4 @@ OPENROUTER_MODEL=openai/gpt-4o-mini
 APP_DEBUG=false
 
 FINAM_ACCESS_TOKEN=your_finam_access_token_here
-FINAM_API_BASE_URL=https://trade-api.finam.ru
+FINAM_API_BASE_URL=https://api.finam.ru
