--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ types-requests = "^2.32.0"
 validate-submission = "scripts.validate_submission:main"
 generate-submission = "scripts.generate_submission:main"
 calculate-metrics = "scripts.calculate_metrics:main"
+evaluate = "scripts.evaluate:evaluate"
 chat-cli = "src.app.interfaces.chat_cli:main"
 
 [build-system]
