--- a/requirements.txt
+++ b/requirements.txt
@@ -3,17 +3,20 @@ anyio==4.11.0
 black==25.9.0
 certifi==2025.8.3
 charset-normalizer==3.4.3
-click==8.3.0
+click==8.1.7
 fastapi==0.118.0
 -e git+https://github.com/Orange-Hack/finam-x-hse-trade-ai-hack-trader.git@64cc4c328f90da6d19316fcc1f6592acb903378c#egg=finam_x_hse_trade_ai_hack_trader
 h11==0.16.0
 httpcore==1.0.9
-httpx==0.28.1
+httpx[http2]==0.28.1
 idna==3.10
 iniconfig==2.1.0
+langchain==0.3.7
+langchain-openai==0.2.5
+mcp==1.1.0
 mypy_extensions==1.1.0
 narwhals==2.6.0
-numpy==2.3.3
+numpy==1.26.4
 packaging==25.0
 pandas==2.3.3
 pathspec==0.12.1
